@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-04T08:08:25Z",
-  "count_outdated" : 1701,
-  "uniques_outdated" : 496,
-  "count" : 1733,
+  "timestamp" : "2022-08-04T16:07:00Z",
+  "count_outdated" : 1704,
+  "uniques_outdated" : 497,
+  "count" : 1735,
   "uniques" : 513,
   "clones" : [
-    {
-      "timestamp": "2022-07-21T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-22T00:00:00Z",
       "count": 2,
